; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_max77693_charger.c_max77693_set_batttery_overcurrent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_max77693_charger.c_max77693_set_batttery_overcurrent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.max77693_charger = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [37 x i8] c"Wrong value for battery overcurrent\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@CHG_CNFG_12_B2SOVRC_SHIFT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [32 x i8] c"Battery overcurrent: %u (0x%x)\0A\00", align 1
@MAX77693_CHG_REG_CHG_CNFG_12 = common dso_local global i32 0, align 4
@CHG_CNFG_12_B2SOVRC_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.max77693_charger*, i32)* @max77693_set_batttery_overcurrent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max77693_set_batttery_overcurrent(%struct.max77693_charger* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.max77693_charger*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.max77693_charger* %0, %struct.max77693_charger** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %22

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = icmp ult i32 %10, 2000000
  br i1 %11, label %15, label %12

12:                                               ; preds = %9
  %13 = load i32, i32* %5, align 4
  %14 = icmp ugt i32 %13, 3500000
  br i1 %14, label %15, label %22

15:                                               ; preds = %12, %9
  %16 = load %struct.max77693_charger*, %struct.max77693_charger** %4, align 8
  %17 = getelementptr inbounds %struct.max77693_charger, %struct.max77693_charger* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @dev_err(i32 %18, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %3, align 4
  br label %50

22:                                               ; preds = %12, %2
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %22
  %26 = load i32, i32* %5, align 4
  %27 = sub i32 %26, 2000000
  %28 = udiv i32 %27, 250000
  %29 = add i32 %28, 1
  store i32 %29, i32* %6, align 4
  br label %31

30:                                               ; preds = %22
  store i32 0, i32* %6, align 4
  br label %31

31:                                               ; preds = %30, %25
  %32 = load i32, i32* @CHG_CNFG_12_B2SOVRC_SHIFT, align 4
  %33 = load i32, i32* %6, align 4
  %34 = shl i32 %33, %32
  store i32 %34, i32* %6, align 4
  %35 = load %struct.max77693_charger*, %struct.max77693_charger** %4, align 8
  %36 = getelementptr inbounds %struct.max77693_charger, %struct.max77693_charger* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 8
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @dev_dbg(i32 %37, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i32 %38, i32 %39)
  %41 = load %struct.max77693_charger*, %struct.max77693_charger** %4, align 8
  %42 = getelementptr inbounds %struct.max77693_charger, %struct.max77693_charger* %41, i32 0, i32 0
  %43 = load %struct.TYPE_2__*, %struct.TYPE_2__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* @MAX77693_CHG_REG_CHG_CNFG_12, align 4
  %47 = load i32, i32* @CHG_CNFG_12_B2SOVRC_MASK, align 4
  %48 = load i32, i32* %6, align 4
  %49 = call i32 @regmap_update_bits(i32 %45, i32 %46, i32 %47, i32 %48)
  store i32 %49, i32* %3, align 4
  br label %50

50:                                               ; preds = %31, %15
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i32 @dev_err(i32, i8*) #1

declare dso_local i32 @dev_dbg(i32, i8*, i32, i32) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
